[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
hyper = { version = "1.5.0", features = ["full"] }
http-body-util = "0.1.2"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.8", features = ["json", "cookies", "default-tls", "stream"] }